<?xml version="1.0"?>
<package>
  <name>ros_example</name>
  <version>0.0.0</version>
  <description>An example ROS package with a talker and listener</description>

  <maintainer email="mhaskell9@gmail.com">Mat Haskell</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
